--- a/venue.html
+++ b/venue.html
@@ -125,7 +125,7 @@
             <div class="container">
                 <div class="copyright">
                     &copy; Copyright <a href="https://www.freewebsitecode.com">Your Site Name</a>. All Rights Reserved<br>
-					Template By <a href="https://www.freewebsitecode.com">Free Website Code</a>
+					Template By <a href="https://www.freewebsitecode.com">Dhawan Solanki</a>
                 </div>
             </div>
         </footer>
