--- a/Foundational-Research-Track.html
+++ b/Foundational-Research-Track.html
@@ -28,15 +28,131 @@
         <style>
 .para{
     margin-top:2%;
-    margin-left:10%;
-    margin-right:10%;
+    /* margin-left:10%;
+    margin-right:10%; */
 }
 </style>
     </head>
 
     <body>
         <!-- Header Start -->
-        <?php include("includes/header.php"); ?>
+        <link href="css/style.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script type="text/javascript">
+  (function($) { // Begin jQuery
+    $(function() { // DOM ready
+      // If a link has a dropdown, add sub menu toggle.
+      $('nav ul li a:not(:only-child)').click(function(e) {
+        $(this).siblings('.nav-dropdown').toggle();
+        // Close one dropdown when selecting another
+        $('.nav-dropdown').not($(this).siblings()).hide();
+        e.stopPropagation();
+      });
+      // Clicking away from dropdown will remove the dropdown class
+      $('html').click(function() {
+        $('.nav-dropdown').hide();
+      });
+      // Toggle open and close nav styles on click
+      $('#nav-toggle').click(function() {
+        $('nav ul').slideToggle();
+      });
+      // Hamburger to X toggle
+      $('#nav-toggle').on('click', function() {
+        this.classList.toggle('active');
+      });
+    }); // end DOM ready
+  })(jQuery); // end jQuery
+  </script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+  .dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+  </style>
+<!-- Header Start -->
+ <header id="header">
+        <div class="container-fluid">
+            <div id="logo" class="pull-left">
+                <!-- Uncomment below if you prefer to use text logo -->
+                <h2><a href="index.html" class="scrollto">ICDDS</a></h2> 
+                <!-- <a href="index.html">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
+            </div>
+            <nav id="nav-menu-container">
+                <ul class="nav-menu">
+                    <li class="menu-active"><a href="index.php">Home</a></li>
+                    <!-- <li><a href="about.php">About</a></li> -->
+                    <li><a href="#">Committee</a>
+
+                    <ul class="nav-dropdown">
+            <li><a href="Organizing-Committee.php">Organizing Committee</a></li>
+            <li><a href="Program-Committee.php">Program Committee</a></li>
+            
+          </ul>
+</li>
+
+                    <li><a href="agenda.php">Agenda</a></li>
+
+                    <li><a href="#">For Authors</a>
+          <ul class="nav-dropdown">
+            <li><a href="Foundational-Research-Track.php">Foundational Research Track</a></li>
+            <li><a href="Data-Science-and-System-Research.php">Data Science and System Research</a></li>
+            <li><a href="Data-Science-and-Applications-Track.php">Data Science and Applications Track</a></li>
+          </ul>
+        </li>
+
+                    <li><a href="venue.php">Venue</a></li>
+                    <!-- <li><a href="ticket.html">Tickets</a></li> -->
+                    <li><a href="contact.php">Contact</a></li>
+                    <!-- <li><a href="login.html">Login</a></li> -->
+                </ul>
+            </nav><!-- #nav-menu-container -->
+        </div>
+    </header>
+    <!-- #header end -->
         <!-- Header end -->
 
         <!-- Banner Section Start-->
@@ -64,7 +180,9 @@
             </div>
         </section>
         <!-- Banner Section end -->
-
+        <div class="row">
+        <div class="col-md-1"></div>            
+<div class="col-md-8">
         <p class="para"> 
         DDS’22 invites submissions discussing original research contributions on all aspects of data science, management of data, artificial intelligence, machine/deep learning and their applications focused on theoretical formulations, experimentations, benchmarking, scalability, trustworthiness of algorithms, novel algorithms and computing, etc. Authors can submit papers <strong> maximum of 6 pages </strong>including references. All accepted and presented papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library and other indexing.</p>
 
@@ -105,9 +223,45 @@ Paper submission deadline: June 15, 2022 <br>
 Paper acceptance decision: August 15, 2022 <br>
 Venue: BMS College of Engineering, Bangalore <br>
         </p>
-
+</div> 
+ <div class="col-md-2">
+     <h2>Academic Partners</h2>
+    <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
+    <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
+    <img class="img-fluid" src="img/BMS LOGO.jpg" />
+    <img class="img-fluid" src="img/RV LOGO.jpg" />
+    <img class="img-fluid" src="img/VVCE LOGO.jpg" />
+    <img class="img-fluid" src="img/MIT LOGO.jpg" />
+</div>
+</div> 
         <!-- Footer Start -->
-            <?php include("includes/footer.php"); ?>
+            <!-- Footer Start -->
+<footer id="footer">
+    <div class="footer-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="social-links">
+                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a>
+                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="copyright">
+            &copy; 2022 <a href="https://www.icdds.org">ICDDS</a>. All Rights Reserved.<br>
+            Organized By <a href="https://www.cs.ieeebangalore.org/">IEEE Computer Society Banglore Chapter</a>
+        </div>
+    </div>
+</footer>
+<!-- #footer end -->
         <!-- #footer end -->
 
         <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
