--- a/index.html
+++ b/index.html
@@ -116,30 +116,30 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="index.php">Home</a></li>
-                    <!-- <li><a href="about.php">About</a></li> -->
+                    <li class="menu-active"><a href="index.html">Home</a></li>
+                    <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
                     <ul class="nav-dropdown">
-            <li><a href="Organizing-Committee.php">Organizing Committee</a></li>
-            <li><a href="Program-Committee.php">Program Committee</a></li>
+            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
+            <li><a href="Program-Committee.html">Program Committee</a></li>
             
           </ul>
 </li>
 
-                    <li><a href="agenda.php">Agenda</a></li>
+                    <li><a href="agenda.html">Agenda</a></li>
 
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
-            <li><a href="Foundational-Research-Track.php">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.php">Data Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.php">Data Science and Applications Track</a></li>
+            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
+            <li><a href="Data-Science-and-System-Research.html">Data Science and System Research</a></li>
+            <li><a href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a></li>
           </ul>
         </li>
 
-                    <li><a href="venue.php">Venue</a></li>
+                    <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <!-- <li><a href="login.html">Login</a></li> -->
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -296,9 +296,9 @@
                             DDS’22- a flagship conference of IEEE Computer Society Bangalore Chapter invites researchers, engineers, and subject matter experts from academia, industry and start-ups to present their latest innovations in Data Science and their applications. DDS mainly has three tracks- <strong> Foundational Research Track, Data Science and System Research, and Data Science and Applications Track. </strong>
 Authors are encouraged to submit their original work(s) in either of these tracks or can submit in all. Foundational Research Track aims to receive submissions from theory to novel findings and current practices in all aspects of data science, whereas Data Science and System Research Track is focused on research addressing data science and its use cases for systems and distributed platforms. Data Science and Applications Track invites submissions addressing the research gap from the real-world problems and significant value creations.
                             </p>
-                            <a href="Foundational-Research-Track.php">Foundational Research Track</a>          <br>
-                            <a href="Data-Science-and-System-Research.php">Data Science and System Research</a><br>
-                            <a href="Data-Science-and-Applications-Track.php">Data Science and Applications Track</a>
+                            <a href="Foundational-Research-Track.html">Foundational Research Track</a>          <br>
+                            <a href="Data-Science-and-System-Research.html">Data Science and System Research</a><br>
+                            <a href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a>
                         </div>
                     </div>
                 </div>
