--- a/Foundational-Research-Track.html
+++ b/Foundational-Research-Track.html
@@ -123,30 +123,30 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="index.php">Home</a></li>
-                    <!-- <li><a href="about.php">About</a></li> -->
+                    <li class="menu-active"><a href="index.html">Home</a></li>
+                    <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
                     <ul class="nav-dropdown">
-            <li><a href="Organizing-Committee.php">Organizing Committee</a></li>
-            <li><a href="Program-Committee.php">Program Committee</a></li>
+            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
+            <li><a href="Program-Committee.html">Program Committee</a></li>
             
           </ul>
 </li>
 
-                    <li><a href="agenda.php">Agenda</a></li>
+                    <li><a href="agenda.html">Agenda</a></li>
 
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
-            <li><a href="Foundational-Research-Track.php">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.php">Data Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.php">Data Science and Applications Track</a></li>
+            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
+            <li><a href="Data-Science-and-System-Research.html">Data Science and System Research</a></li>
+            <li><a href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a></li>
           </ul>
         </li>
 
-                    <li><a href="venue.php">Venue</a></li>
+                    <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <!-- <li><a href="login.html">Login</a></li> -->
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -170,7 +170,7 @@
                                  <p class="banner-nav">
                                     <span class="banner-box">
                                         <a href="index.html">Home</a>
-                                        <a href="committe.php">Foundational Research Track</a>
+                                        <a href="committe.html">Foundational Research Track</a>
                                     </span>
                                 </p>
                             </div>
