--- a/Foundational-Research-Track.html
+++ b/Foundational-Research-Track.html
@@ -118,12 +118,12 @@
         <div class="container-fluid">
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use text logo -->
-                <h2><a href="index.html" class="scrollto">ICDDS</a></h2> 
-                <!-- <a href="index.html">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
+                <h2><a href="/" class="scrollto">ICDDS</a></h2> 
+                <!-- <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="index.html">Home</a></li>
+                    <li class="menu-active"><a href="/">Home</a></li>
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
@@ -169,7 +169,7 @@
                             <div class="col-md-6">
                                  <p class="banner-nav">
                                     <span class="banner-box">
-                                        <a href="index.html">Home</a>
+                                        <a href="/">Home</a>
                                         <a href="committe.html">Foundational Research Track</a>
                                     </span>
                                 </p>
