--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </ul>
 </li>
 
-                    <li><a href="agenda.html">Agenda</a></li>
+                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
 
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
@@ -217,7 +217,7 @@
         <section id="about">
             <div class="container">
                 <header class="section-header">
-                    <h3>About Us</h3>
+                    <h3>About</h3>
                 </header>
                 <div class="row">
                     <div class="col-md-12 about-col-1">
@@ -308,7 +308,7 @@ Authors are encouraged to submit their original work(s) in either of these track
         <!-- Call For Papers Section End -->
         
         <!-- Agenda Section Start -->
-        <section id="agenda">
+        <!-- <section id="agenda">
             <div class="container">
                 <header class="section-header">
                     <h3>Our Agenda</h3>
@@ -358,7 +358,7 @@ Authors are encouraged to submit their original work(s) in either of these track
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Agenda Section End -->
         
         <!-- Venue Section Start -->
