--- a/Data-Science-and-Applications-Track.html
+++ b/Data-Science-and-Applications-Track.html
@@ -135,7 +135,7 @@
           </ul>
 </li>
 
-                    <li><a href="agenda.html">Agenda</a></li>
+                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
 
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
