--- a/Foundational-Research-Track.html
+++ b/Foundational-Research-Track.html
@@ -134,7 +134,7 @@
           </ul>
 </li>
 
-                    <li><a href="agenda.html">Agenda</a></li>
+                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
 
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
