--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -127,7 +127,7 @@
           </ul>
 </li>
 
-                    <li><a href="agenda.html">Agenda</a></li>
+                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
 
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
