--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="agenda.html">Agenda</a></li>
+                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
 
                     <li><a href="#">For Authors</a>
                         <ul class="nav-dropdown">
