[fix] Organising Commitee

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -192,11 +192,13 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/Abhyuday.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Abhyuday</p>
+                            <p class="commitee-names">Abhyuday Mondal</p>
+                            <p class="position">University of Georgia, USA</p>
                         </div>
                         <div>
                             <img src="img/Bimal.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Bimal</p>
+                            <p class="commitee-names">Bimal K. Roy</p>
+                            <p class="position">ISI Kolkatha</p>
                         </div>
                     </div>
 
@@ -213,10 +215,12 @@
 
                             <img src="img/Gang_Li.JPG" width="250px" height="250px">
                             <p class="commitee-names">Gang Li</p>
+                            <p class="position">Deakin University</p>
                         </div>
                         <div>
                             <img src="img/Qian_Li.JPG" width="250px" height="250px">
                             <p class="commitee-names">Qian Li</p>
+                            <p class="position">Curtin University</p>
                         </div>
                     </div>
 
@@ -231,19 +235,28 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/snehansu.png" width="250px" height="250px">
+                            <p class="commitee-names">Abhishek Appaji</p>
+                            <p class="position">BMSCE, India</p>
+                        </div>
+                        <div>
+                            <img src="img/snehansu.png" width="250px" height="250px">
                             <p class="commitee-names">Snehansu Saha</p>
+                            <p class="position">BITS Pilani Goa, India</p>
                         </div>
                         <div>
                             <img src="img/Nagaraja.jpg" width="250px" height="250px">
                             <p class="commitee-names">Nagaraja GS</p>
+                            <p class="position">RVCE, India</p>
                         </div>
                         <div>
                             <img src="img/Ramakrishna-Hegde-413x500.jpg" width="250px" height="250px">
                             <p class="commitee-names">Ramakrishna Hegede</p>
+                            <p class="position">VVCE, India</p>
                         </div>
                         <div>
                             <img src="img/srikanth prabhu.jpg" width="250px" height="250px">
                             <p class="commitee-names">Srikanth Prabhu</p>
+                            <p class="position">MIT, India</p>
                         </div>
                     </div>
                     </img>
@@ -258,6 +271,7 @@
                         <div>
                             <img src="img/Nagaraja.jpg" width="250px" height="250px">
                             <p class="commitee-names">Nagaraja GS</p>
+                            <p class="position">RVCE, India</p>
                         </div>
                     </div>
 
@@ -274,10 +288,12 @@
                         <div>
                             <img src="img/Alok-Ranjan.jpg" width="250px" height="250px">
                             <p class="commitee-names">Alok Ranjan</p>
+                            <p class="position">Bosch India</p>
                         </div>
                         <div>
                             <img src="img/seems_chopra.jpg" width="250px" height="250px">
                             <p class="commitee-names">Seema Chopra</p>
+                            <p class="position">Boeing, India</p>
                         </div>
                     </div>
 
@@ -293,10 +309,12 @@
                         <div>
                             <img src="img/Ramakrishna-Hegde-413x500.jpg" width="250px" height="250px">
                             <p class="commitee-names">Ramakrishna Hegede</p>
+                            <p class="position">VVCE, India</p>
                         </div>
                         <div>
                             <img src="img/srikanth prabhu.jpg" width="250px" height="250px">
                             <p class="commitee-names">Srikanth Prabhu</p>
+                            <p class="position">MIT, India</p>
                         </div>
                     </div>
 
@@ -312,14 +330,19 @@
                         <div>
                             <img src="img/Dr.vishwas-lakkundi.jpg" width="250px" height="250px">
                             <p class="commitee-names">Dr. Vishwas Lakkundi</p>
+                            <p class="position">Smarten Spaces</p>
                         </div>
                         <div>
                             <img src="img/snehansu.png" width="250px" height="250px">
                             <p class="commitee-names">Snehansu Sharma</p>
+                            <p class="position">BITS Pilani Goa, India</p>
+
                         </div>
                         <div>
                             <img src="img/Prasant-Misra-413x500.jpg" width="250px" height="250px">
                             <p class="commitee-names">Dr. Prasant Misra</p>
+                            <p class="position">TCS Research, India</p>
+
                         </div>
                     </div>
                 </div>
@@ -328,20 +351,26 @@
             <section id="agenda">
                 <div class="container">
                     <header class="section-header">
-                        <h3>Principal Advisor</h3>
+                        <h3>Principal Advisors</h3>
                     </header>
                     <div class="image-holder">
                         <div>
                             <img src="img/Dr.vishwas-lakkundi.jpg" width="250px" height="250px">
                             <p class="commitee-names">Dr. Vishwas Lakkundi</p>
+                            <p class="position">Smarten Spaces</p>
+
                         </div>
                         <div>
                             <img src="img/snehansu.png" width="250px" height="250px">
                             <p class="commitee-names">Snehansu Sharma</p>
+                            <p class="position">BITS Pilani Goa, India</p>
+
                         </div>
                         <div>
                             <img src="img/geetha.jpeg" width="250px" height="250px">
-                            <p class="commitee-names">Dr. Geetha</p>
+                            <p class="commitee-names">Geetha Manjunath</p>
+                            <p class="position">NIRAMAI Health Analytix</p>
+
                         </div>
                     </div>
                 </div>
@@ -355,11 +384,18 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/Abhyuday.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Abhyuday</p>
+                            <p class="commitee-names">Narayanan Subramaniam</p>
+                            <p class="position">Nutanix</p>
                         </div>
                         <div>
                             <img src="img/Bimal.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Bimal</p>
+                            <p class="commitee-names"> Santosh Kumar</p>
+                            <p class="position">Ws Adkins</p>
+                        </div>
+                        <div>
+                            <img src="img/Bimal.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Prashant Mantri</p>
+                            <p class="position">Tessolve</p>
                         </div>
                     </div>
                 </div>
