--- a/Data-Science-and-System-Research.html
+++ b/Data-Science-and-System-Research.html
@@ -184,7 +184,7 @@
         <div class="col-md-1"></div>            
 <div class="col-md-8">
         <p class="para">
-        DDS’22 invites submissions discussing original research contributions on all aspects of data science, management of data, artificial intelligence, machine/deep learning and their applications focused on systems research. Authors can submit papers<strong> maximum of 6 pages </strong>including references. All accepted and presented papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library and other indexing.
+        ICDDS’22 invites submissions discussing original research contributions on all aspects of data science, management of data, artificial intelligence, machine/deep learning and their applications focused on systems research. Authors can submit papers<strong> maximum of 6 pages </strong>including references. All accepted and presented papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library and other indexing.
 </p>
 <p class="para">The topics of interests include, but are not limited to:</p>
  
