[fix] Abhishek Appaji

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -234,7 +234,7 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/snehansu.png" width="250px" height="250px">
+                            <img src="img/abhishek_appaji.jpeg" width="250px" height="250px">
                             <p class="commitee-names">Abhishek Appaji</p>
                             <p class="position">BMSCE, India</p>
                         </div>
@@ -375,7 +375,7 @@
                     </div>
                 </div>
             </section>
-
+            <!-- 
             <section id="agenda">
                 <div class="container">
                     <header class="section-header">
@@ -399,7 +399,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- Agenda Section End -->
         </div>
         <div class="col-md-3">
