--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -114,12 +114,12 @@
         <div class="container-fluid">
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use text logo -->
-                <h2><a href="/" class="scrollto">ICDDS</a></h2>
+                <h2><a href="index.html" class="scrollto">ICDDS</a></h2>
                 <!-- <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="/">Home</a></li>
+                    <li class="menu-active"><a href="index.html">Home</a></li>
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
