--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
         <div class="container-fluid">
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use text logo -->
-                <h2><a href="/" class="scrollto">ICDDS</a></h2>
+                <h2><a href="index.html" class="scrollto">ICDDS</a></h2>
                 <!-- <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
             </div>
             <nav id="nav-menu-container">
@@ -167,7 +167,7 @@
                         <div class="col-md-6">
                             <p class="banner-nav">
                                 <span class="banner-box">
-                                    <a href="/">Home</a>
+                                    <a href="index.html">Home</a>
                                     <a href="contact.html">Contact</a>
                                 </span>
                             </p>
@@ -211,13 +211,13 @@
                 </div>
 
                 <div class="col-md-2">
-                    <h2>Academic</h2>
+                    <h2>Academic Partners</h2>
                     <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
                     <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
                     <img class="img-fluid" src="img/BMS LOGO.jpg" />
                 </div>
                 <div class="col-md-2">
-                    <h2>Partners</h2>
+                    <h2><br><br></h2>
                     <img class="img-fluid" src="img/RV LOGO.jpg" />
                     <img class="img-fluid" src="img/VVCE LOGO.jpg" />
                     <img class="img-fluid" src="img/MIT LOGO.jpg" />
