--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
         <div class="container-fluid">
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use text logo -->
-                <h2><a href="/" class="scrollto">ICDDS</a></h2>
+                <h2><a href="index.html" class="scrollto">ICDDS</a></h2>
                 <!-- <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="/">Home</a></li>
+                    <li class="menu-active"><a href="index.html">Home</a></li>
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
@@ -154,7 +154,7 @@
     <!-- #header end -->
 
     <!-- Intro Section Start-->
-    <section id="intro">
+    <!-- <section id="intro">
         <div class="intro-container">
             <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
 
@@ -219,8 +219,42 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- #intro end -->
+    
+    <!-- Banner Section Start-->
+    <section class="banner" style="height: 700px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1 class="banner1-header1">
+                                ICDDS 2022
+                            </h1>
+                            <h2 style="text-align: center;">DECEMBER 2-3, 2022</h2>
+                            <h3 style="text-align: center;">Hybrid Conference | Bengaluru, India</h3>
+                        </div>
+                        <!-- <div class="col-md-6">
+                            <p class="banner-nav">
+                                <span class="banner-box">
+                                    <a href="/">Home</a>
+                                    <a href="Program-Committee.html">Organizing Committee</a>
+                                </span>
+                            </p>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Banner Section end -->
+
+
+
+
+
+
 
     <!-- About Section Start-->
     <section id="about">
