--- a/venue.html
+++ b/venue.html
@@ -111,12 +111,12 @@
         <div class="container-fluid">
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use text logo -->
-                <h2><a href="/" class="scrollto">ICDDS</a></h2> 
+                <h2><a href="index.html" class="scrollto">ICDDS</a></h2> 
                 <!-- <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="/">Home</a></li>
+                    <li class="menu-active"><a href="index.html">Home</a></li>
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
@@ -201,7 +201,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.4599577246213!2d77.56522136482171!3d12.942393090874972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae158b11e34d2f%3A0x5f4adbdbab8bd80f!2sBMS%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1647757828442!5m2!1sen!2sin" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="col-md-2">
-        <h2>Academic</h2>
+        <h2>Academic Partners</h2>
                         
                         <img class="" src="img/APPCAIR LOGO.jpg"  width="170px;" height="150px";/>
                         <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px";/>
@@ -209,7 +209,7 @@
                         
         </div>
         <div class="col-md-2">
-        <h2>Partners</h2>
+        <h2><br><br> </h2>
                         <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px";/>
                         <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px";/>
                         <img class="" src="img/MIT LOGO.jpg" width="170px;"  />
