--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -166,6 +166,7 @@
                         </div>
                         <div class="col-md-6">
                             <p class="banner-nav">
+                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                 <span class="banner-box">
                                     <a href="/">Home</a>
                                     <a href="Program-Committee.html">Organizing Committee</a>
@@ -198,7 +199,7 @@
                         <div>
                             <img src="img/Bimal.jpg" width="250px" height="250px">
                             <p class="commitee-names">Bimal K. Roy</p>
-                            <p class="position">ISI Kolkatha</p>
+                            <p class="position">ISI Kolkata</p>
                         </div>
                     </div>
 
@@ -215,12 +216,12 @@
 
                             <img src="img/Gang_Li.JPG" width="250px" height="250px">
                             <p class="commitee-names">Gang Li</p>
-                            <p class="position">Deakin University</p>
+                            <p class="position">Deakin University, Australia</p>
                         </div>
                         <div>
                             <img src="img/Qian_Li.JPG" width="250px" height="250px">
                             <p class="commitee-names">Qian Li</p>
-                            <p class="position">Curtin University</p>
+                            <p class="position">Curtin University, Australia</p>
                         </div>
                     </div>
 
@@ -330,7 +331,7 @@
                         <div>
                             <img src="img/Dr.vishwas-lakkundi.jpg" width="250px" height="250px">
                             <p class="commitee-names">Dr. Vishwas Lakkundi</p>
-                            <p class="position">Smarten Spaces</p>
+                            <p class="position">Smarten Spaces, India</p>
                         </div>
                         <div>
                             <img src="img/snehansu.png" width="250px" height="250px">
@@ -357,7 +358,7 @@
                         <div>
                             <img src="img/Dr.vishwas-lakkundi.jpg" width="250px" height="250px">
                             <p class="commitee-names">Dr. Vishwas Lakkundi</p>
-                            <p class="position">Smarten Spaces</p>
+                            <p class="position">Smarten Spaces, India</p>
 
                         </div>
                         <div>
@@ -369,7 +370,7 @@
                         <div>
                             <img src="img/geetha.jpeg" width="250px" height="250px">
                             <p class="commitee-names">Geetha Manjunath</p>
-                            <p class="position">NIRAMAI Health Analytix</p>
+                            <p class="position">NIRAMAI Health Analytix, India</p>
 
                         </div>
                     </div>
