--- a/venue.html
+++ b/venue.html
@@ -161,6 +161,7 @@
                             </div>
                             <div class="col-md-6">
                                  <p class="banner-nav">
+                                  <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="/">Home</a>
                                         <a href="venue.html">Venue</a>
@@ -185,7 +186,7 @@
                     </div>
                     <div class="col-md-6 des-cols">
                         <div class="des-col">
-                            <h2>Our Venue</h2>
+                            <h2>Conference Venue</h2>
                             <h3>B.M.S. College of Engineering</h3>
                             <h4> Bull Temple Rd, Basavanagudi, Bengaluru, Karnataka 560019</h4>
                             <p>
