--- a/Data-Science-and-System-Research.html
+++ b/Data-Science-and-System-Research.html
@@ -168,6 +168,7 @@
                             </div>
                             <div class="col-md-6">
                                  <p class="banner-nav">
+                                  <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="/">Home</a>
                                         <a href="committe.html">Data Science and System Research</a>
