--- a/contact.html
+++ b/contact.html
@@ -166,6 +166,7 @@
                         </div>
                         <div class="col-md-6">
                             <p class="banner-nav">
+                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                 <span class="banner-box">
                                     <a href="index.html">Home</a>
                                     <a href="contact.html">Contact</a>
