--- a/index.html
+++ b/index.html
@@ -230,10 +230,11 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="banner1-header1">
+                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="200px"><br>
                                 ICDDS 2022
                             </h1>
-                            <h2 style="text-align: center;">DECEMBER 2-3, 2022</h2>
-                            <h3 style="text-align: center;">Hybrid Conference | Bengaluru, India</h3>
+                            <h2 style="text-align: center; color: #ddd;">DECEMBER 2-3, 2022</h2>
+                            <h3 style="text-align: center; color: #ddd;">Hybrid Conference | Bengaluru, India</h3>
                         </div>
                         <!-- <div class="col-md-6">
                             <p class="banner-nav">
@@ -295,7 +296,7 @@
                                     on several aspects. For example, quality of data, data management, computation,
                                     knowledge discovery and decision.
                                 </p>
-                                <p> DDS’22 aims to look broadly at data based innovation and technologies in
+                                <p> ICDDS’22 aims to look broadly at data based innovation and technologies in
                                     interdisciplinary areas. The conference considers all aspects of application, data,
                                     decision science, solution design and challenges in such new paradigm from theory to
                                     applied research.</p>
@@ -357,9 +358,9 @@
                             systems and distributed platforms. Data Science and Applications Track invites submissions
                             addressing the research gap from the real-world problems and significant value creations.
                         </p>
-                        <a href="Foundational-Research-Track.html">Foundational Research Track</a> <br>
-                        <a href="Data-Science-and-System-Research.html">Data Science and System Research</a><br>
-                        <a href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a>
+                        <a  href="Foundational-Research-Track.html">Foundational Research Track</a> <br>
+                        <a  href="Data-Science-and-System-Research.html">Data Science and System Research</a><br>
+                        <a  href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a>
                     </div>
                 </div>
             </div>
@@ -433,7 +434,7 @@
                 </div>
                 <div class="col-md-6 des-cols">
                     <div class="des-col">
-                        <h2>Our Venue</h2>
+                        <h2>Conference Venue</h2>
                         <h3>B.M.S. College of Engineering</h3>
                         <h4>Bull Temple Rd, Basavanagudi, Bengaluru, Karnataka 560019</h4>
                         <p>
