--- a/Foundational-Research-Track.html
+++ b/Foundational-Research-Track.html
@@ -170,7 +170,7 @@
                                  <p class="banner-nav">
                                   <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
-                                        <a href="/">Home</a>
+                                        <a href="index.html">Home</a>
                                         <a href="committe.html">Foundational Research Track</a>
                                     </span>
                                 </p>
