--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -168,7 +168,7 @@
                             <p class="banner-nav">
                                 <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                 <span class="banner-box">
-                                    <a href="/">Home</a>
+                                    <a href="index.html">Home</a>
                                     <a href="Program-Committee.html">Organizing Committee</a>
                                 </span>
                             </p>
