--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -163,7 +163,7 @@
                                  <p class="banner-nav">
                                   <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
-                                        <a href="/">Home</a>
+                                        <a href="index.html">Home</a>
                                         <a href="Program-Committee.html">Program Committee</a>
                                     </span>
                                 </p>
@@ -175,16 +175,71 @@
         </section>
         <!-- Banner Section end -->
 
-        <!-- Agenda Section Start -->
-        <section id="agenda">
-            <div class="container">
-                <header class="section-header">
-                    <h3>Will Be Updated Shortly...</h3>
-                </header>
-                
-            </div>
-        </section>
-        <!-- Agenda Section End -->
+        <div class="row">
+          <div class="col-md-9">
+  
+              <!-- Agenda Section Start -->
+              <section id="agenda">
+                  <div class="container">
+                      <header class="section-header">
+                          <h3>Program Commitee</h3>
+                      </header>
+                      <div class="image-holder">
+                          <div>
+                              <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
+                              <p class="commitee-names">Sravan Danda</p>
+                              <p class="position">BITS Pilani Goa, India</p>
+                          </div>
+                          <div>
+                              <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                              <p class="commitee-names">Seema Chopra</p>
+                              <p class="position">Boeing, India</p>
+                          </div>
+                          <div>
+                            <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                            <p class="commitee-names">Manik Gupta</p>
+                            <p class="position">BITS Pilani Goa, India</p>
+                        </div>
+                        <div>
+                          <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                          <p class="commitee-names">Surjay Ghosh</p>
+                          <p class="position">BITS Pilani Goa, India</p>
+                      </div>
+                      <div>
+                        <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
+                        <p class="commitee-names">Venkatakrishnan Ramaswam</p>
+                        <p class="position">BITS Pilani Hyderabad, India</p>
+                    </div>
+                    <div>
+                        <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                        <p class="commitee-names">Basabdatta Bhattacharya</p>
+                        <p class="position">BITS Pilani Goa, India</p>
+                    </div>
+                    <div>
+                      <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                      <p class="commitee-names">Archana Mathur</p>
+                      <p class="position">NMIT, India</p>
+                  </div>
+                  <div>
+                    <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
+                    <p class="commitee-names">Aditya Challa</p>
+                    <p class="position">BITS Pilani Goa, India</p>
+                </div>
+                      </div>
+  
+                  </div>
+              </section>
+          </div>
+          <div class="col-md-3">
+              <h3>Academic Partners</h3>
+              <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+              <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px" alt="partner-logos" />
+              <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+              <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+              <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
+              <img class="" src="img/MIT LOGO.jpg" width="170px;" />
+          </div>
+      </div>
 
         <!-- Footer Start -->
             <!-- Footer Start -->
