--- a/Data-Science-and-Applications-Track.html
+++ b/Data-Science-and-Applications-Track.html
@@ -171,7 +171,7 @@
                                  <p class="banner-nav">
                                   <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
-                                        <a href="/">Home</a>
+                                        <a href="index.html">Home</a>
                                         <a href="committe.html">Data science and applications Track</a>
                                     </span>
                                 </p>
