--- a/Data-Science-and-System-Research.html
+++ b/Data-Science-and-System-Research.html
@@ -170,7 +170,7 @@
                                  <p class="banner-nav">
                                   <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
-                                        <a href="/">Home</a>
+                                        <a href="index.html">Home</a>
                                         <a href="committe.html">Data Science and System Research</a>
                                     </span>
                                 </p>
