--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="banner1-header1">
-                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="200px"><br>
+                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="200px"><br><br>
                                 ICDDS 2022
                             </h1>
                             <h2 style="text-align: center; color: #ddd;">DECEMBER 2-3, 2022</h2>
