--- a/venue.html
+++ b/venue.html
@@ -163,7 +163,7 @@
                                  <p class="banner-nav">
                                   <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
                                     <span class="banner-box">
-                                        <a href="/">Home</a>
+                                        <a href="index.html">Home</a>
                                         <a href="venue.html">Venue</a>
                                     </span>
                                 </p>
