--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -89,7 +89,7 @@
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content a { 
   float: none;
   color: black;
   padding: 12px 16px;
@@ -184,46 +184,46 @@
                       <header class="section-header">
                           <h3>Program Commitee</h3>
                       </header>
-                      <div class="image-holder">
+                      <div class="image-holder-program">
                           <div>
                               <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
-                              <p class="commitee-names">Sravan Danda</p>
-                              <p class="position">BITS Pilani Goa, India</p>
+                              <p class="commitee-names-program">Sravan Danda, BITS Pilani Goa, India</p>
+                              <!-- <p class="position">BITS Pilani Goa, India</p> -->
                           </div>
                           <div>
                               <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                              <p class="commitee-names">Seema Chopra</p>
-                              <p class="position">Boeing, India</p>
+                              <p class="commitee-names-program">Seema Chopra, Boeing, India</p>
+                              <!-- <p class="position">Boeing, India</p> -->
                           </div>
                           <div>
                             <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                            <p class="commitee-names">Manik Gupta</p>
-                            <p class="position">BITS Pilani Goa, India</p>
+                            <p class="commitee-names-program">Manik Gupta, BITS Pilani Goa, India</p>
+                            <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
                           <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                          <p class="commitee-names">Surjay Ghosh</p>
-                          <p class="position">BITS Pilani Goa, India</p>
+                          <p class="commitee-names-program">Surjay Ghosh, BITS Pilani Goa, India</p>
+                          <!-- <p class="position">BITS Pilani Goa, India</p> -->
                       </div>
                       <div>
                         <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
-                        <p class="commitee-names">Venkatakrishnan Ramaswam</p>
-                        <p class="position">BITS Pilani Hyderabad, India</p>
+                        <p class="commitee-names-program">Venkatakrishnan Ramaswam, BITS Pilani Hyderabad, India</p>
+                        <!-- <p class="position">BITS Pilani Hyderabad, India</p> -->
                     </div>
                     <div>
                         <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                        <p class="commitee-names">Basabdatta Bhattacharya</p>
-                        <p class="position">BITS Pilani Goa, India</p>
+                        <p class="commitee-names-program">Basabdatta Bhattacharya, BITS Pilani Goa, India</p>
+                        <!-- <p class="position">BITS Pilani Goa, India</p> -->
                     </div>
                     <div>
                       <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                      <p class="commitee-names">Archana Mathur</p>
-                      <p class="position">NMIT, India</p>
+                      <p class="commitee-names-program">Archana Mathur, NMIT, India</p>
+                      <!-- <p class="position">NMIT, India</p> -->
                   </div>
                   <div>
                     <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                    <p class="commitee-names">Aditya Challa</p>
-                    <p class="position">BITS Pilani Goa, India</p>
+                    <p class="commitee-names-program">Aditya Challa, BITS Pilani Goa, India</p>
+                    <!-- <p class="position">BITS Pilani Goa, India</p> -->
                 </div>
                       </div>
   
