--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -199,7 +199,7 @@
                         <div>
                             <img src="img/Bimal.jpg" width="250px" height="250px">
                             <p class="commitee-names">Bimal K. Roy</p>
-                            <p class="position">ISI Kolkata</p>
+                            <p class="position">ISI Kolkata, India</p>
                         </div>
                     </div>
 
