--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -330,18 +330,18 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/Dr.vishwas-lakkundi.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Dr. Vishwas Lakkundi</p>
+                            <p class="commitee-names">Vishwas Lakkundi</p>
                             <p class="position">Smarten Spaces, India</p>
                         </div>
                         <div>
                             <img src="img/snehansu.png" width="250px" height="250px">
-                            <p class="commitee-names">Snehansu Sharma</p>
+                            <p class="commitee-names">Snehansu Saha</p>
                             <p class="position">BITS Pilani Goa, India</p>
 
                         </div>
                         <div>
                             <img src="img/Prasant-Misra-413x500.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Dr. Prasant Misra</p>
+                            <p class="commitee-names">Prasant Misra</p>
                             <p class="position">TCS Research, India</p>
 
                         </div>
@@ -357,13 +357,13 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/Dr.vishwas-lakkundi.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Dr. Vishwas Lakkundi</p>
+                            <p class="commitee-names">Vishwas Lakkundi</p>
                             <p class="position">Smarten Spaces, India</p>
 
                         </div>
                         <div>
                             <img src="img/snehansu.png" width="250px" height="250px">
-                            <p class="commitee-names">Snehansu Sharma</p>
+                            <p class="commitee-names">Snehansu Saha</p>
                             <p class="position">BITS Pilani Goa, India</p>
 
                         </div>
